--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 		"redux-devtools-extension": "^2.13.8",
 		"regenerator-runtime": "^0.13.7",
 		"style-loader": "^2.0.0",
+		"styled-components": "^5.3.5",
 		"stylelint": "^13.10.0",
 		"stylelint-config-recommended": "^3.0.0",
 		"webpack": "5.11.0",
 		"webpack-cli": "3.3.8",
-		"webpack-dev-server": "^3.1.14",	
-		"styled-components": "^5.3.5"
+		"webpack-dev-server": "^3.1.14"
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
@@ -41,7 +41,8 @@
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
-		"redux-saga": "^1.1.3"
+		"redux-saga": "^1.1.3",
+		"styled-normalize": "^8.0.7"
 	},
 	"scripts": {
 		"dev": "webpack-dev-server --mode development --open --hot",
